--- a/.github/workflows/github-actions-danger.yml
+++ b/.github/workflows/github-actions-danger.yml
@@ -10,7 +10,7 @@ steps:
 - name: Use Node.js 10.x
 uses: actions/setup-node@v1
 with:
-node-version: 10.x
+node-version: latest
 - name: install yarn
 run: npm install -g yarn
 - name: yarn install, build, and test
