--- a/.github/workflows/github-actions-danger.yml
+++ b/.github/workflows/github-actions-danger.yml
@@ -20,4 +20,5 @@ jobs:
           yarn test
       - name: Danger
         run: yarn danger ci
-        env: GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
